# smn_mora

./: .gitignore  Cargo.toml
safedata/: secret  test.smn  test01.smn
src/: config.rs  main.rs
src/smn_interface/: interface_cli.rs  interface_interactive.rs  mod.rs
src/smn_safe/: mod.rs
src/smn_safe/safe_io/: io_crypto.rs  io_file.rs  io_read.rs  io_write.rs  mod.rs
src/smn_safe/safe_structs/: mod.rs
tools/: collect.ps1  install.ps1  update.ps1
