[package]
name = "smn_mora"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.40", features = ["derive"]}
crossterm = "0.29.0"
dirs = "6.0.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
rpassword = "7.4.0"
serde = {version = "1.0.219", features = ["derive"]}
sha2 = "0.10.9"
toml = "0.8.23"
